# SignalProcessingTool

./: .gitignore  Cargo.toml  README.md  test
benches/: my_benchmark.rs
src/: main.rs  mods.rs
src/mods/: DataType.rs  Math.rs  data_resampling.rs  digital_filters.rs  fast_fourier_transform.rs  peak_finder.rs  short_time_fourier_transform.rs  windowing.rs
src/mods/digital_filters/: fir.rs
src/mods/digital_filters/fir/: bandpass.rs  highpass.rs  lowpass.rs  moving_average.rs
src/mods/digital_filters/fir/bandpass/: butterworth.rs
src/mods/digital_filters/fir/highpass/: butterworth.rs
src/mods/digital_filters/fir/lowpass/: butterworth.rs
src/mods/digital_filters/fir/moving_average/: moving_average_filter.rs
src/mods/digital_filters/fir/notch/: butterworth.rs
src/mods/digital_filters/iir/: bandpass.rs  lowpass.rs  notch.rs
src/mods/digital_filters/iir/bandpass/: butterworth.rs
src/mods/digital_filters/iir/highpass/: butterworth.rs
src/mods/digital_filters/iir/lowpass/: butterworth.rs
src/mods/digital_filters/iir/moving_average/: moving_average_filter.rs
src/mods/digital_filters/iir/notch/: butterworth.rs
src/tests/: test.rs
