[package]
name = "SpectralEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
dsp = "0.10.2"
assert_approx_eq = "1.1.0"
ndarray = "0.15.4"
ndarray-linalg = "0.16.0"
ndarray-stats = "0.5.1"






